force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/QCC_Qantas_Host_Communication_Template__mdt.object-meta.xml
<CustomObject>
    <description>This is used to maintain all the Email Template and SMS Template that will be sent to the customer based on their preferences.</description>
    <label>QCC Qantas Host Communication Template</label>
    <pluralLabel>QCC Qantas Host Communication Templates</pluralLabel>
</CustomObject>