force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <description>This is used to check the Cabin of the Qantas Host record.</description>
    <inlineHelpText>This is used to check the Cabin of the Qantas Host record.</inlineHelpText>
    <label>Cabin</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>