force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Departure_Port__c.field-meta.xml
<CustomField>
    <fullName>Departure_Port__c</fullName>
    <description>This is used to check the Departure Port of the Qantas Host record.</description>
    <inlineHelpText>This is used to check the Departure Port of the Qantas Host record.</inlineHelpText>
    <label>Departure Port</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>