force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_API_Name__c</fullName>
    <description>This is used to maintain the Email Template that will be used.</description>
    <inlineHelpText>This is used to maintain the Email Template that will be used.</inlineHelpText>
    <label>Email Template API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>