force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Excluded_Flights__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Flights__c</fullName>
    <description>This is used to maintain the Excluded Flights.</description>
    <inlineHelpText>This is used to maintain the Excluded Flights.</inlineHelpText>
    <label>Excluded Flights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>