force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Frequent_Flyer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Tier__c</fullName>
    <description>This is used to check the Tier of the Contact related to Qantas Host record.</description>
    <inlineHelpText>This is used to check the Tier of the Contact related to Qantas Host record.</inlineHelpText>
    <label>Frequent Flyer Tier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>