force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Is_Top_Platinum_One__c.field-meta.xml
<CustomField>
    <fullName>Is_Top_Platinum_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to check the Top Platinum One of the Contact related to Qantas Host record.</description>
    <inlineHelpText>This is used to check the Top Platinum One of the Contact related to Qantas Host record.</inlineHelpText>
    <label>Is Top Platinum One?</label>
    <type>Checkbox</type>
</CustomField>