force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Online_Form_Submission_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>Online_Form_Submission_SMS_Template__c</fullName>
    <description>The email template API name to be used in sending the SMS when Online Submission Date has been populated.</description>
    <inlineHelpText>The email template API name to be used in sending the SMS when Online Submission Date has been populated.</inlineHelpText>
    <label>Online Form Submission SMS Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>