force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Order_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Order_Sequence__c</fullName>
    <description>This is used as hierarchy for the template that will be used to send the Qantas Host message.</description>
    <inlineHelpText>This is used as hierarchy for the template that will be used to send the Qantas Host message.</inlineHelpText>
    <label>Order Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>