force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/SMS_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_API_Name__c</fullName>
    <description>This is used to maintain the SMS Template that will be used.</description>
    <inlineHelpText>This is used to maintain the SMS Template that will be used. Note: This is only for Chairman&apos;s Lounge Platinum One and Platinum one scenario.</inlineHelpText>
    <label>SMS Template API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>