force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/fields/Tier_Effective_Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier_Effective_Tier__c</fullName>
    <description>This is used to check the Tier Effective Tier of the Qantas Host record.</description>
    <inlineHelpText>This is used to check the Tier Effective Tier of the Qantas Host record.</inlineHelpText>
    <label>Tier Effective Tier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>