force-app/main/default/objects/QCC_Qantas_Host_Communication_Template__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Order_Sequence__c</columns>
    <columns>Active__c</columns>
    <columns>Cabin__c</columns>
    <columns>Is_Top_Platinum_One__c</columns>
    <columns>Frequent_Flyer_Tier__c</columns>
    <columns>Tier_Effective_Tier__c</columns>
    <columns>Departure_Port__c</columns>
    <columns>Excluded_Flights__c</columns>
    <columns>Email_Template_API_Name__c</columns>
    <columns>SMS_Template_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>